[RLS] Fix ScrollFocusedEditableElementIntoView

This CL fixes coordinate conversions inside
ScrollFocusedEditableElementIntoView when root layer scrolling is
enabled.

Bug: 788248
Change-Id: Icd5bbf7aa86570e537c26b237f9c66f7f168b6a9