third_party/WebKit/Source/core/clipboard/DataTransfer.cpp
@@ -350,15 +350,13 @@ void DataTransfer::SetDragImageElement(Node* node, const IntPoint& loc) {
   setDragImage(nullptr, node, loc);
 }
 
-FloatRect DataTransfer::ClipByVisualViewport(const FloatRect& rect_in_frame,
+FloatRect DataTransfer::ClipByVisualViewport(const FloatRect& rect_in_document,
                                              const LocalFrame& frame) {
   IntRect viewport_in_root_frame =
       IntRect(frame.GetPage()->GetVisualViewport().VisibleRect());
-  FloatRect viewport_in_frame =
-      frame.View()->ConvertFromRootFrame(viewport_in_root_frame);
-  auto* view_scrollable_area = frame.View()->LayoutViewportScrollableArea();
-  viewport_in_frame.Move(view_scrollable_area->GetScrollOffset());
-  return Intersection(viewport_in_frame, rect_in_frame);
+  FloatRect viewport_in_document =
+      frame.View()->RootFrameToDocument(viewport_in_root_frame);
+  return Intersection(viewport_in_document, rect_in_document);
 }
 
 // static
